# AniTerm-Canary

./: Cargo.toml  LICENSE  README.md  config.toml
resources/: corpus.json  corpus.toml
scripts/: setup.sh
src/: config.rs  corpus.rs  environment.rs  fastfetch.rs  ipc.rs  lib.rs
